--- a/package.json
+++ b/package.json
@@ -9,23 +9,30 @@
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "@heygen/streaming-avatar": "^2.0.13",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-toggle-group": "^1.1.3",
+    "@react-spring/web": "^10.0.3",
     "ahooks": "^3.8.4",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.545.0",
     "next": "^15.3.0",
     "openai": "^4.52.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-spring": "^10.0.3"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^15.3.1",
     "@types/node": "20.5.7",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.1.2",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
     "@typescript-eslint/parser": "^8.31.0",
-    "@next/eslint-plugin-next": "^15.3.1",
     "autoprefixer": "10.4.19",
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
